@@ -8,6 +8,9 @@
 	* Source/NSTextView_actions.m (-centerSelectionInVisibleArea):
 	Replace the provisional implementation by a correct one.
 
+	* Source/NSTextView_actions.m (-transpose): Fix implementation to
+	really match the implementation of Emacs' transpose command.
+
 2008-12-20 22:13-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Source/GSNibLoading.m: Read objects/accessibility and oids
